--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.winner{
+  background-color: rgb(144, 148, 156);
+  padding: 10px;
+  margin: 20px;
+  width:600px;
+  height: 150px;
+  color: lightgreen;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.winner h1{
+  color: rgb(241, 237, 237);
 }
